<resources>
    <string name="app_name">Me</string>
    <string name="enter_email">email id…</string>
    <string name="enter_password">password…</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in_btn_text">Sign-In</string>
    <string name="add_your_password">Add your password…</string>
    <string name="confirm_password">confirm password…</string>
    <string name="enter_mobile_number">enter mobile number…</string>

    // Main Activity
    <string name="register_user">Register</string>
    <string name="sign_in">Sign-In</string>
    <string name="already_registered_n_sign_in">already registered?   SIGN IN</string>

    // Confirm mobile number fragment
    <string name="confirm_mobile_number">Confirm your mobile number...</string>

    // Fonts
    <string name="font_hinted_Averta_Bold" translatable="false">fonts/hinted-Averta-Bold.ttf</string>

    // For the onboarding suggession
    <string name="start_with_your_email">Let\'s start with your email…</string>

    // For the SharedPreferences
    <string name="preference_file_key" translatable="false">com.avenjr.me.me</string>
    <string name="email" translatable="false">null</string>
    <string name="launcher_activity" translatable="false">true</string>
    <string name="logo_view">logo_view</string>
    <string name="loading_generic_message">loading…</string>
    <string name="submit">Submit</string>

    // Forgot Password
    <string name="please_enter_email">please enter your email…</string>
    <string name="forgot_your_email_passwod">forgot your email and password?</string>
    <string name="emailId">email</string>
    <string name="password">password</string>
    <string name="forgot_email">Forgot Email</string>
    <string name="select_dob">select your date of birth…</string>
    <string name="login_title">User Login</string>
    <string name="approve_reject_image">approve reject image</string>
    <string name="skip">Skip</string>
    <string name="Yes">Yes</string>
    <string name="my_intrest">My Interest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="select_your_hobbies">Select your hobbies…</string>
    <string name="back_button" translatable="false">back_button</string>
    <string name="next_button">next_button</string>
    <string name="select_hobbies_title">Select your hobbies to create your profile…</string>
    <string name="select_extra_activities_title">Select your extra activities to create your profile…</string>
    <string name="share">Share</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>

</resources>
