<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".ui.fragments.EnterEmailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/half_of_the_header_width"
            android:orientation="vertical">

            <com.avenjr.me.me.ui.views.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_margin"
                android:text="@string/start_with_your_email"
                android:textColor="@color/black"
                android:textSize="@dimen/content_description_size"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/approve_reject_image"
                android:layout_width="@dimen/half_of_the_header_width"
                android:layout_height="@dimen/half_of_the_header_width"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:contentDescription="@string/approve_reject_image" />

            <com.avenjr.me.me.ui.views.SelectableEditText
                android:id="@+id/reg_email_txt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_height"
                android:background="@drawable/edit_text_unselected"
                android:hint="@string/enter_email"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:shadowColor="@color/white"
                android:singleLine="true"
                android:textColorHint="@color/gray" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>