<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/forgot_password_dialog_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/curve_only_top_50"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.avenjr.me.me.ui.views.CustomTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp"
            android:background="@drawable/curve_only_top_50_appcolor"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/header_height"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_marginEnd="@dimen/header_height">

            <com.avenjr.me.me.ui.views.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/please_enter_email"
                android:textColor="@color/appBackgroundDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                android:layout_marginLeft="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <com.avenjr.me.me.ui.views.CustomEditText
                        android:id="@+id/reg_email_txt"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:hint="@string/enter_email"
                        android:padding="5dp"
                        android:shadowColor="@color/white"
                        android:singleLine="true"
                        android:textColorHint="@color/gray">
                    </com.avenjr.me.me.ui.views.CustomEditText>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp">
            </View>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>


    <com.avenjr.me.me.ui.views.CustomTextView
        android:id="@+id/btn_id_submit"
        android:layout_margin="10dp"
        style="@style/GreenPillButton"
        android:layout_width="140dp"
        android:layout_height="@dimen/header_height"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
        app:layout_constraintStart_toStartOf="parent" />

    <com.avenjr.me.me.ui.views.CustomTextView
        android:id="@+id/btn_cancel"
        style="@style/CanclePillButton"
        android:layout_width="140dp"
        android:layout_height="@dimen/header_height"
        android:layout_margin="10dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_id_submit"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>