<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".ui.fragments.EnterPasswordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.avenjr.me.me.ui.views.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/add_your_password"
                android:textColor="@color/black"
                android:textSize="@dimen/content_description_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp">

                <ImageView
                    android:id="@+id/approve_reject__pass_image"
                    android:layout_width="@dimen/half_of_the_header_width"
                    android:layout_height="@dimen/half_of_the_header_width"
                    android:layout_gravity="end"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/approve_reject_image" />

                <com.avenjr.me.me.ui.views.SelectableEditText
                    android:id="@+id/reg_password_txt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/header_height"
                    android:background="@drawable/edit_text_unselected"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:shadowColor="@color/green"
                    android:singleLine="true"
                    android:textColorHint="@color/gray"/>

                <ImageView
                    android:id="@+id/approve_reject__confirm_image"
                    android:layout_width="@dimen/half_of_the_header_width"
                    android:layout_height="@dimen/half_of_the_header_width"
                    android:layout_gravity="end"
                    android:layout_margin="2dp"
                    android:contentDescription="@string/approve_reject_image" />

                <com.avenjr.me.me.ui.views.SelectableEditText
                    android:id="@+id/reg__re_password_txt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/header_height"
                    android:background="@drawable/edit_text_unselected"
                    android:hint="@string/confirm_password"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:shadowColor="@color/green"
                    android:singleLine="true"
                    android:textColorHint="@color/gray"></com.avenjr.me.me.ui.views.SelectableEditText>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>