<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/app_background"
    android:id="@+id/mobile_number_verification_container"
    tools:context=".ui.fragments.VerifyNumberFragment">

    <com.avenjr.me.me.ui.views.CustomTextView
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/appBackgroundDark"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.avenjr.me.me.ui.views.CustomTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/confirm_mobile_number"
        android:textColor="@color/black"
        android:textSize="@dimen/content_description_size"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/skip_button"/>

    <Spinner
        android:id="@+id/country_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:spinnerMode="dropdown"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/country_spinner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.avenjr.me.me.ui.views.CustomEditText
            android:id="@+id/country_code"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="+91"
            android:editable="false"
            android:background="@null"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />

            <com.avenjr.me.me.ui.views.CustomEditText
                android:id="@+id/reg_mobile_txt"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:hint="@string/enter_mobile_number"
                android:background="@null"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:shadowColor="@color/white"
                android:singleLine="true"
                android:textColorHint="@color/gray">
            </com.avenjr.me.me.ui.views.CustomEditText>
        </LinearLayout>

        <ImageView
            android:id="@+id/approve_reject_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_margin="15dp"
            android:contentDescription="@string/approve_reject_image" />
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/parent">

    </View>

</androidx.constraintlayout.widget.ConstraintLayout>