<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.avenjr.me.me.viewmodel.LoginViewModel">
        </variable>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.avenjr.me.me.ui.views.NavigationHeader
                android:id="@+id/navigationHeader"
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_height">
            </com.avenjr.me.me.ui.views.NavigationHeader>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/circleImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/navigationHeader"
                app:layout_constraintBottom_toTopOf="@id/sign_in_layout">

                <ImageView
                    android:layout_width="97dp"
                    android:layout_height="100dp"
                    android:background="@drawable/logo_background"
                    android:contentDescription="@string/logo_view"
                    android:padding="10dp"
                    android:src="@mipmap/ic_launcher_foreground" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sign_in_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                app:layout_constraintTop_toBottomOf="@id/circleImageView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    android:padding="10dp"
                    app:layout_constraintBottom_toTopOf="@+id/signIn_btn_submit"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.avenjr.me.me.ui.views.CustomEditText
                        android:id="@+id/signIn_et_id"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:drawableStart="@drawable/ic_user_black_24dp"
                        android:drawableLeft="@drawable/ic_user_black_24dp"
                        android:drawablePadding="5dp"
                        android:hint="@string/enter_email"
                        android:imeOptions="actionNext"
                        android:padding="10dp"
                        android:focusableInTouchMode="true"
                        android:singleLine="true"
                        app:addTextChangedListener="@{viewModel.idTextWatcher}" />

                    <com.avenjr.me.me.ui.views.CustomEditText
                        android:id="@+id/signIn_et_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:drawableStart="@drawable/ic_lock_black_24dp"
                        android:drawableLeft="@drawable/ic_lock_black_24dp"
                        android:drawablePadding="5dp"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:focusableInTouchMode="true"
                        app:addTextChangedListener="@{viewModel.passwordTextWatcher}" />

                    <TextView
                        android:id="@+id/signIn_et_forgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:padding="10dp"
                        android:text="@string/forgot_your_email_passwod"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/signIn_btn_submit"
                    android:layout_width="140dp"
                    android:layout_height="40sp"
                    android:layout_margin="20dp"

                    android:onClick="@{viewModel::onLoginClicked}"
                    app:cardBackgroundColor="@color/green"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/sign_in_btn_text"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_layout">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/black"
                    android:layout_marginTop="11dp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="OR CONTINUE WITH"
                    android:background="@color/white"
                    android:layout_margin="2dp"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:layout_centerHorizontal="true"
                    app:layout_constraintTop_toTopOf="parent" />

                    <RelativeLayout
                        android:id="@+id/sign_in_options"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="50dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/sign_in_google"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_margin="5dp"
                            android:src="@drawable/google_logo"
                            app:civ_border_color="@color/white"
                            app:civ_border_width="2dp" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_margin="5dp"
                            android:layout_toRightOf="@id/sign_in_google"
                            android:src="@drawable/facebook_logo"
                            app:civ_border_color="@color/white"
                            app:civ_border_width="2dp" />
                    </RelativeLayout>
                </RelativeLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>